fixed toolbar alignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -14,6 +14,7 @@ body{
 #toolbar {
   position: fixed;
   top: 0px;
+  left: 0px;
   line-height: 50px;
   display: flex;
   flex-flow: row wrap;
